Fri Apr 22 07:28:43 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * DevGuideExamples/Multithreading/Reactive/svc.conf:
        * DevGuideExamples/Multithreading/ThreadPerConnection/server.conf:
        * DevGuideExamples/RTCORBA/svc.conf:
        * docs/tutorials/Quoter/Event_Service/ec.conf:
        * examples/PluggableUDP/tests/Performance/svc.conf:
        * examples/PluggableUDP/tests/SimplePerformance/svc.conf:
        * examples/RTCORBA/Activity/client.conf:
        * examples/RTCORBA/Activity/server.conf:
        * examples/RTCORBA/Activity/svc.conf.client:
        * examples/RTCORBA/Activity/svc.conf.server:
        * examples/RTScheduling/Fixed_Priority_Scheduler/svc.conf.client:
        * examples/RTScheduling/Fixed_Priority_Scheduler/svc.conf.server:
        * examples/RTScheduling/MIF_Scheduler/svc.conf.client:
        * examples/RTScheduling/MIF_Scheduler/svc.conf.server:
        * orbsvcs/Concurrency_Service/svc.conf:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/supplier.conf:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Filter/ec.conf:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/supplier.conf:
        * orbsvcs/DevGuideExamples/NotifyService/RTNotify/notify.conf:
        * orbsvcs/DevGuideExamples/NotifyService/RTNotify/nsclient.conf:
        * orbsvcs/DevGuideExamples/ValueTypes/Notify/notify.conf:
        * orbsvcs/Event_Service/svc.conf:
        * orbsvcs/Logging_Service/Notify_Logging_Service/svc.conf:
        * orbsvcs/TAO_Service/svc.conf:
        * orbsvcs/examples/ImR/Combined_Service/dynserver.conf:
        * orbsvcs/examples/ImR/Combined_Service/start_all.conf:
        * orbsvcs/examples/Notify/Lanes/client.conf:
        * orbsvcs/examples/Notify/Lanes/notify.conf:
        * orbsvcs/examples/Notify/ThreadPool/client.conf:
        * orbsvcs/examples/Notify/ThreadPool/notify.conf:
        * orbsvcs/examples/RtEC/IIOPGateway/ec.conf: